--- a/index.html
+++ b/index.html
@@ -5,12 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhimanyu Dev Upadhyay | Portfolio</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: #f4f4f4; }
-        header { background: #333; color: white; padding: 20px; font-size: 24px; }
-        .section { padding: 50px; }
-        .projects { display: flex; flex-wrap: wrap; justify-content: center; }
-        .project { background: white; padding: 20px; margin: 10px; width: 300px; box-shadow: 2px 2px 10px gray; }
-        footer { background: #333; color: white; padding: 10px; position: absolute; width: 100%; bottom: 0; }
+        body { 
+            font-family: Arial, sans-serif; 
+            margin: 0; 
+            padding: 0; 
+            text-align: center; 
+            background-color: #f4f4f4; 
+            color: #333;
+        }
+        header { 
+            background: #222; 
+            color: white; 
+            padding: 20px; 
+            font-size: 28px; 
+            font-weight: bold; 
+        }
+        .section { 
+            padding: 50px; 
+            max-width: 800px; 
+            margin: auto; 
+        }
+        .projects { 
+            display: flex; 
+            flex-wrap: wrap; 
+            justify-content: center; 
+            gap: 20px;
+        }
+        .project { 
+            background: white; 
+            padding: 20px; 
+            margin: 10px; 
+            width: 300px; 
+            box-shadow: 2px 2px 10px gray; 
+            border-radius: 10px;
+            transition: transform 0.3s;
+        }
+        .project:hover {
+            transform: scale(1.05);
+        }
+        .project a {
+            text-decoration: none;
+            color: #007BFF;
+            font-weight: bold;
+        }
+        footer { 
+            background: #222; 
+            color: white; 
+            padding: 15px; 
+            width: 100%; 
+            position: relative;
+            bottom: 0;
+            font-size: 14px;
+        }
+        .contact a {
+            color: #007BFF;
+            text-decoration: none;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -27,21 +78,24 @@
             <div class="project">
                 <h3>Project 1</h3>
                 <p>Short description of your project.</p>
+                <a href="#">View Project</a>
             </div>
             <div class="project">
                 <h3>Project 2</h3>
                 <p>Short description of your project.</p>
+                <a href="#">View Project</a>
             </div>
         </div>
     </div>
     
-    <div class="section">
+    <div class="section contact">
         <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
+        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>GitHub: <a href="https://github.com/theblueadept" target="_blank">github.com/theblueadept</a></p>
     </div>
     
     <footer>
-        &copy; 2025 Abhimanyu Dev Upadhyay
+        &copy; 2025 Abhimanyu Dev Upadhyay | All Rights Reserved
     </footer>
 </body>
 </html>
