--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <h2>Projects</h2>
         <div class="projects">
             <div class="project">
-                <h3>Project 1</h3>
-                <p>Short description of your project.</p>
-                <a href="#">View Project</a>
+                <h3>Ising Model Simulation</h3>
+                <p>A numerical simulation of the Ising Model, exploring phase transitions and magnetization using Monte Carlo methods.</p>
+                <a href="https://github.com/TheBlueAdept/Portfolio/blob/main/IsingPage/index">View Project</a>
             </div>
             <div class="project">
                 <h3>Project 2</h3>
