--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="project">
                 <h3>Ising Model Simulation</h3>
                 <p>A numerical simulation of the Ising Model, exploring phase transitions and magnetization using Monte Carlo methods.</p>
-                <a href="https://theblueadept.github.io/Portfolio/IsingPage">View Project</a>
+                <a href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
             </div>
             <div class="project">
                 <h3>Project 2</h3>
