--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="section contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-        <p>GitHub: <a href="https://github.com/theblueadept" target="_blank">github.com/theblueadept</a></p>
+        <p>GitHub: <a href="https://github.com/TheBlueAdept/ThePhyCompendiumt" target="_blank">github.com/theblueadept</a></p>
     </div>
     
     <footer>
