--- a/IsingPage/index.html
+++ b/IsingPage/index.html
@@ -56,7 +56,7 @@
     
     <div class="section">
         <h2>Code & Resources</h2>
-        <p>Find the full project on GitHub: <a href="https://github.com/TheBlueAdept/Portfolio/blob/main/IsingPage">GitHub Repository</a></p>
+        <p>Find the full project on GitHub: <a href="https://github.com/TheBlueAdept/ThePhyCompendium/tree/main/Ising%20Model">GitHub Repository</a></p>
     </div>
     
     <footer>
