--- a/IsingPage/index.html
+++ b/IsingPage/index.html
@@ -37,10 +37,19 @@
         .carousel-slide {
             display: flex;
             transition: transform 0.5s ease-in-out;
+            justify-content: center;
+            align-items: center;
         }
         .carousel-slide img {
             width: 100%;
             border-radius: 10px;
+            transition: transform 0.5s ease-in-out, filter 0.5s;
+        }
+        /* Styling for side images (blur + scale) */
+        .carousel-slide img:not(.active) {
+            transform: scale(0.8);
+            filter: blur(3px);
+            opacity: 0.5;
         }
         .carousel-caption {
             margin-top: 10px;
@@ -59,8 +68,9 @@
             cursor: pointer;
             font-size: 20px;
             border-radius: 50%;
+            transition: opacity 0.3s;
         }
-        .prev { left: 10px; }
+        .prev { left: 10px; display: none; } /* Hide prev by default */
         .next { right: 10px; }
         .prev:hover, .next:hover { background-color: rgba(0, 0, 0, 0.8); }
 
@@ -98,9 +108,9 @@
         <p>The following carousel shows spin configurations at different temperatures (T = 0 to 8).</p>
         
         <!-- Carousel Container -->
-        <div class="carousel-container">
-            <button class="prev" onclick="prevSlide()">&#10094;</button>
-            <div class="carousel-slide">
+        <div class="carousel-container" id="carousel">
+            <button class="prev" id="prevBtn" onclick="prevSlide()">&#10094;</button>
+            <div class="carousel-slide" id="slideContainer">
                 <img src="ising_model_simulation_0.gif" alt="T = 0">
                 <img src="ising_model_simulation_1.gif" alt="T = 1">
                 <img src="ising_model_simulation_2.gif" alt="T = 2">
@@ -111,7 +121,7 @@
                 <img src="ising_model_simulation_7.gif" alt="T = 7">
                 <img src="ising_model_simulation_8.gif" alt="T = 8">
             </div>
-            <button class="next" onclick="nextSlide()">&#10095;</button>
+            <button class="next" id="nextBtn" onclick="nextSlide()">&#10095;</button>
         </div>
         <div class="carousel-caption" id="caption">T = 0</div>
     </div>
@@ -127,36 +137,82 @@
 
     <script>
         let index = 0;
-        const slides = document.querySelector(".carousel-slide");
-        const images = document.querySelectorAll(".carousel-slide img");
+        let autoSlideTimer;
+        const slides = document.querySelectorAll(".carousel-slide img");
+        const slideContainer = document.getElementById("slideContainer");
         const caption = document.getElementById("caption");
+        const prevBtn = document.getElementById("prevBtn");
+        const nextBtn = document.getElementById("nextBtn");
+        const carousel = document.getElementById("carousel");
 
-        function updateCaption() {
+        function updateCarousel() {
+            slideContainer.style.transform = `translateX(${-index * 100}%)`;
             caption.innerText = "T = " + index;
+
+            // Show prev button only on index 0 and 3
+            prevBtn.style.display = "none";
+
+            // Reset styles for all images
+            slides.forEach((img, i) => {
+                img.classList.remove("active");
+                img.style.transform = "scale(0.8)";
+                img.style.filter = "blur(3px)";
+                img.style.opacity = "0.5";
+            });
+
+            // Highlight the active image
+            slides[index].classList.add("active");
+            slides[index].style.transform = "scale(1)";
+            slides[index].style.filter = "blur(0px)";
+            slides[index].style.opacity = "1";
         }
 
         function nextSlide() {
-            if (index >= images.length - 1) {
-                index = 0;
-            } else {
-                index++;
-            }
-            slides.style.transform = `translateX(${-index * 100}%)`;
-            updateCaption();
+            index = (index + 1) % slides.length;
+            updateCarousel();
         }
 
         function prevSlide() {
-            if (index <= 0) {
-                index = images.length - 1;
-            } else {
-                index--;
-            }
-            slides.style.transform = `translateX(${-index * 100}%)`;
-            updateCaption();
+            index = (index - 1 + slides.length) % slides.length;
+            updateCarousel();
         }
 
-        // Auto-slide every 3 seconds
-        setInterval(nextSlide, 3000);
+        function startAutoSlide() {
+            stopAutoSlide();
+            autoSlideTimer = setInterval(() => {
+                if (!userInteracting) {
+                    nextSlide();
+                }
+            }, 11000);
+        }
+
+        function stopAutoSlide() {
+            clearInterval(autoSlideTimer);
+        }
+
+        let userInteracting = false;
+
+        carousel.addEventListener("mouseenter", () => {
+            userInteracting = true;
+            stopAutoSlide();
+        });
+
+        carousel.addEventListener("mouseleave", () => {
+            userInteracting = false;
+            startAutoSlide();
+        });
+
+        carousel.addEventListener("click", () => {
+            userInteracting = true;
+            stopAutoSlide();
+            setTimeout(() => { 
+                userInteracting = false;
+                startAutoSlide();
+            }, 5000);
+        });
+
+        updateCarousel();
+        startAutoSlide();
     </script>
 </body>
 </html>
