--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
         .button:hover {
             background: #007acc;
         }
+        .project-box {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+        .project h3 {
+            margin-top: 0;
+        }
+        .project a {
+            display: inline-block;
+            margin-top: 10px;
+            color: #007acc;
+            font-weight: bold;
+            text-decoration: none;
+        }
+        .project a:hover {
+            text-decoration: underline;
+        }
         footer { 
             background: #b3e0ff; 
             color: #1e3a5f; 
@@ -103,12 +123,12 @@
         
         <div id="projects" class="section">
             <h2>Projects</h2>
-            <div class="project">
+            <div class="project-box">
                 <h3>Ising Model Simulation</h3>
                 <p>A numerical simulation of the Ising Model, exploring phase transitions and magnetization using Monte Carlo methods.</p>
                 <a href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
             </div>
-            <div class="project">
+            <div class="project-box">
                 <h3>Project 2</h3>
                 <p>Short description of your project.</p>
                 <a href="#">View Project</a>
