--- a/IsingPage/index.html
+++ b/IsingPage/index.html
@@ -117,7 +117,7 @@
     <div class="content">
         <header>
             <span>Ising Model Simulation</span>
-            <a href="index.html" class="button">Back to Home</a>
+            <a href="https://theblueadept.github.io/Portfolio/" class="button">Back to Home</a>
         </header>
         
         <div id="introduction" class="section">
