--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhimanyu Dev Upadhyay | Portfolio</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');
         
         body { 
-            font-family: 'Quicksand', sans-serif; 
+            font-family: 'Orbitron', sans-serif;  
             margin: 0; 
             padding: 0; 
             background-color: #e0f7ff; 
