--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhimanyu Dev Upadhyay | Portfolio</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');
-        
+        <link href="https://fonts.googleapis.com/css2?family=SUSE&display=swap" rel="stylesheet">
+    
+    <style>
         body { 
-            font-family: 'Orbitron', sans-serif;  
+            font-family: 'SUSE', sans-serif;  
             margin: 0; 
             padding: 0; 
             background-color: #e0f7ff; 
