--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhimanyu Dev Upadhyay | Portfolio</title>
     <style>
-        <link href="https://fonts.googleapis.com/css2?family=SUSE&display=swap" rel="stylesheet">
-    
-    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tomorrow&display=swap');
+        
         body { 
-            font-family: 'SUSE', sans-serif;  
+            font-family: 'Tomorrow', sans-serif; 
             margin: 0; 
             padding: 0; 
             background-color: #e0f7ff; 
