--- a/index.html
+++ b/index.html
@@ -214,16 +214,53 @@
             </ul>
         </div>
 
+        <div id="technical" class="section">
+            <h2>Technical Skills</h2>
+            <ul>
+                <li><strong>Programming Languages: </strong>Python, C++, C, HTML</li>
+                <li><strong>Libraries: </strong>Grid Python Toolkit (GPT), Qiskit, Pennylane, Manim, PyTorch</li>
+            </ul>
+        </div>
+
         <div id="positions" class="section">
             <h2>Positions Held</h2>
+            <h3>Phy Soceity</h3>
             <ul class="timeline">
                 <li class="timeline-item">
                     <h3>Student Head, Phy Society, IIT Kharagpur</h3>
                     <p>2024 - Present</p>
                 </li>
                 <li class="timeline-item">
-                    <h3>Member, KQICC (Quantum Computing Club), IIT Kharagpur</h3>
-                    <p>2024 - Present</p>
+                    <h3>Student Member, Phy Society, IIT Kharagpur</h3>
+                    <p>2023 - 2024</p>
+                </li>
+            </ul>
+            <h3>Kharagpur Quantum Infromation and Computing Club</h3>
+            <ul class = 'timeline'>
+                <li class="'timeline-item">
+                    <h3>Student Member, KQICC, IIT Kharagpur</h3>
+                    <p>2023 - Present</p>
+                </li>
+            </ul>
+            <h3>Debating Society</h3>
+            <ul class="timeline">
+                <li class='timeline-item'>
+                    <h3>Debater, Debating Society, IIT Kharagpur</h3>
+                    <p>2022 - 2023</p>
+                </li>
+            </ul>
+            <h3>Space Technology Student's Society</h3>
+            <ul class='timeline'>
+                <li class="'timeline-item">
+                    <h3>FQTQ Member, spAts, IIT Kharagpur</h3>
+                    <p>2022 - 2022</p>
+                </li>
+            </ul>
+            <h3>Kaanger Valley Academy</h3>
+            <ul class = 'timeline'>
+                <li class = 'timeline-item'>
+                    <h3>Prefect, Student Council, KVA</h3>
+                    <p>2018 - 2020</p>
                 </li>
             </ul>
         </div>
