--- a/index.html
+++ b/index.html
@@ -159,11 +159,9 @@
         <a href="#about" onclick="toggleSidebar()">About Me</a>
         <a href="#projects" onclick="toggleSidebar()">Projects</a>
         <a href="#education" onclick="toggleSidebar()">Education</a>
-        <a href="#coursework" onclick="toggleSidebar()">Coursework</a>
         <a href="#achievements" onclick="toggleSidebar()">Academic Achievements</a>
         <a href="#skills" onclick="toggleSidebar()">Technical Skills</a>
         <a href="#positions" onclick="toggleSidebar()">Positions Held</a>
-        <a href="#extracurricular" onclick="toggleSidebar()">Extracurricular Activities</a>
         <a href="#contact" onclick="toggleSidebar()">Contact</a>
     </div>
 
@@ -175,7 +173,7 @@
         
         <div id="about" class="section">
             <h2>About Me</h2>
-            <p>I'm passionate about Quantum Computing and High-Energy Physics simulations. Welcome to my portfolio!</p>
+            <p>I'm passionate about High-Energy Physics simulations. Welcome to my portfolio!</p>
         </div>
 
         <div id="projects" class="section">
@@ -237,7 +235,7 @@
             </ul>
             <h3>Kharagpur Quantum Infromation and Computing Club</h3>
             <ul class = 'timeline'>
-                <li class="'timeline-item">
+                <li class="timeline-item">
                     <h3>Student Member, KQICC, IIT Kharagpur</h3>
                     <p>2023 - Present</p>
                 </li>
@@ -251,7 +249,7 @@
             </ul>
             <h3>Space Technology Student's Society</h3>
             <ul class='timeline'>
-                <li class="'timeline-item">
+                <li class="timeline-item">
                     <h3>FQTQ Member, spAts, IIT Kharagpur</h3>
                     <p>2022 - 2022</p>
                 </li>
