--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </ul>
         </div>
 
-        <div id="technical" class="section">
+        <div id="skills" class="section">
             <h2>Technical Skills</h2>
             <ul>
                 <li><strong>Programming Languages: </strong>Python, C++, C, HTML</li>
@@ -267,7 +267,17 @@
             &copy; 2025 Abhimanyu Dev Upadhyay | All Rights Reserved
         </footer>
     </div>
-
+    
+    <div id="contact" class="section">
+        <h2>Contacts</h2>
+        <p>Feel free to reach out to me on these handles</p>
+        <ul>
+            <li><strong>Email:</strong> <a href="mailto:abhiup20122004@gmail.com">abhiup20122004@gmail.com</a></li>
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/abhimanyu-dev-upadhyay-088a771a0/" target="_blank">LinkedIn Profile</a></li>
+            <li><strong>GitHub:</strong> <a href="https://github.com/theblueadept" target="_blank">GitHub Profile</a></li>
+        </ul>
+    </div>
+    
     <script>
         function toggleSidebar() {
             document.getElementById("sidebar").classList.toggle("open");
