--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
             font-weight: bold;
         }
 
+        a:hover {
+            background: #80cfff;
+        }
+
         /* Timeline Style */
         .timeline {
             list-style-type: none;
@@ -277,7 +281,7 @@
             <li><strong>GitHub:</strong> <a href="https://github.com/theblueadept" target="_blank">GitHub Profile</a></li>
         </ul>
     </div>
-    
+
     <script>
         function toggleSidebar() {
             document.getElementById("sidebar").classList.toggle("open");
