--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Abhimanyu Dev Upadhyay | Portfolio</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Tomorrow&display=swap');
+        
+        html {
+            scroll-behavior: smooth;
+        }
 
         body { 
             font-family: 'Tomorrow', sans-serif; 
@@ -85,6 +89,7 @@
             color: #007acc;
             text-decoration: none;
             font-weight: bold;
+            transition: background 0.3s;
         }
 
         a:hover {
