--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
         a {
             color: #007acc;
+            padding: 10px;
             text-decoration: none;
             font-weight: bold;
             transition: background 0.3s;
