--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             margin-top: 40px;
         }
 
-        a {
+        .a, .a-project {
             color: #007acc;
             padding: 10px;
             text-decoration: none;
@@ -93,7 +93,7 @@
             transition: background 0.3s;
         }
 
-        a:hover {
+        .a-project:hover {
             background: #80cfff;
         }
 
@@ -191,7 +191,7 @@
             <div class="project-box">
                 <h3>Ising Model Simulation</h3>
                 <p>A numerical simulation of the Ising Model, exploring phase transitions and magnetization using Monte Carlo methods.</p>
-                <a href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
+                <a-project href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
             </div>
         </div>
 
