--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             margin-top: 40px;
         }
 
-        .a, .a-project {
+        a {
             color: #007acc;
             padding: 10px;
             text-decoration: none;
@@ -93,7 +93,7 @@
             transition: background 0.3s;
         }
 
-        .a-project:hover {
+        .project-box a:hover {
             background: #80cfff;
         }
 
