--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="project-box">
                 <h3>Ising Model Simulation</h3>
                 <p>A numerical simulation of the Ising Model, exploring phase transitions and magnetization using Monte Carlo methods.</p>
-                <a-project href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
+                <a href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
             </div>
         </div>
 
