--- a/IsingPage/index.html
+++ b/IsingPage/index.html
@@ -161,6 +161,8 @@
         <a href="#simulation">Simulation Details</a>
         <a href="#animations">Animated Spin Configurations</a>
         <a href="#results">Learnings from the Ising Model</a>
+        <a href="#whatnext">What Next?!</a>
+        <a href="#feedback">Feedback</a>
     </div>
     
     <div class="content">
@@ -172,6 +174,7 @@
         <div id="introduction" class="section">
             <h2>Introduction to the Ising Model</h2>
             <p>The Ising Model is a mathematical model used in statistical mechanics to describe ferromagnetism in materials. It also acts as the first playground for many lattice or grid based systems and is a easy system to implement Monte Carlo methods in. Even while being such a simple system, it very well models ferromagnetic behaviour and displays properties like phase transitions and correlation behaviour.</p>
+            <p>All the code, images and animations used for this project are available on my <a href="https://github.com/TheBlueAdept/ThePhyCompendium/tree/main/Ising%20Model">GitHub page</a></p>
         </div>
 
         <div id="system" class="section">
@@ -205,6 +208,20 @@
 
         <div id="results" class="section">
             <h2>Learnings from the Ising Model</h2>
+        </div>
+
+        <div id="whatnext" class="section">
+            <h2>What Next ?!</h2>
+            <p>Here are the updates I have planned to implement to the Ising Model</p>
+            <ul>
+                <li>Implement simulations with a non-zero external magnetic field.</li>
+                <li>Advanced update algortihms to save simulation time.</li>
+            </ul>
+        </div>
+
+        <div id="Feedback" class="section">
+            <h2>Feedback</h2>
+            <p>Kindly provide your feedback and further ideas on my <a href="abhiup20122004@gmail.com">Email ID</a> on how to this site more interactive, intersting and resourceful !</p>
         </div>
         
         <footer>
