--- a/IsingPage/index.html
+++ b/IsingPage/index.html
@@ -174,7 +174,6 @@
         <div id="introduction" class="section">
             <h2>Introduction to the Ising Model</h2>
             <p>The Ising Model is a mathematical model used in statistical mechanics to describe ferromagnetism in materials. It also acts as the first playground for many lattice or grid based systems and is a easy system to implement Monte Carlo methods in. Even while being such a simple system, it very well models ferromagnetic behaviour and displays properties like phase transitions and correlation behaviour.</p>
-            <p>All the code, images and animations used for this project are available on my <a href="https://github.com/TheBlueAdept/ThePhyCompendium/tree/main/Ising%20Model">GitHub page</a></p>
         </div>
 
         <div id="system" class="section">
@@ -188,6 +187,7 @@
         <div id="simulation" class="section">
             <h2>Simulation Details</h2>
             <p>This simulation implements the 2D Ising Model using the Metropolis algorithm to study spin configurations at different temperatures. The system evolves through Monte Carlo updates, where spins flip based on the energy change they induce, following the Boltzmann probability distribution.</p>
+            <p>All the code, images and animations used for this project are available on my <a href="https://github.com/TheBlueAdept/ThePhyCompendium/tree/main/Ising%20Model">GitHub page</a></p>
         </div>
         
         <div id="animations" class="section">
@@ -219,9 +219,9 @@
             </ul>
         </div>
 
-        <div id="Feedback" class="section">
+        <div id="feedback" class="section">
             <h2>Feedback</h2>
-            <p>Kindly provide your feedback and further ideas on my <a href="abhiup20122004@gmail.com">Email ID</a> on how to this site more interactive, intersting and resourceful !</p>
+            <p>Kindly provide your feedback and further ideas on my <a href="mailto:abhiup20122004@gmail.com">Email ID</a> on how to this site more interactive, intersting and resourceful !</p>
         </div>
         
         <footer>
