--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
                 <p>A numerical simulation of the Ising Model, exploring phase transitions and magnetization using Monte Carlo methods.</p>
                 <a href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
             </div>
+            <div class="project-box">
+                <h3>VQE and Heisenberg XYZ Simulation</h3>
+                <p>A pseudo-quantum simulation of the Heisenberg XYZ Model, exploring ansatz and optimizer efficincies using Variational Quantum Eigensolver algorithm.</p>
+                <a href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
+            </div>
         </div>
 
         <div id="education" class="section">
