--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="project-box">
                 <h3>VQE and Heisenberg XYZ Simulation</h3>
                 <p>A pseudo-quantum simulation of the Heisenberg XYZ Model, exploring ansatz and optimizer efficincies using Variational Quantum Eigensolver algorithm.</p>
-                <a href="https://theblueadept.github.io/Portfolio/IsingPage/">View Project</a>
+                <a href="https://theblueadept.github.io/Portfolio/HeisenbergPage/">View Project</a>
             </div>
         </div>
 
